# -*- python -*-

package(default_visibility = ["//visibility:public"])

load("//tools/lint:lint.bzl", "add_lint_tests")
load(
    "@drake//tools/workspace/lcm:lcm.bzl",
    "lcm_cc_library",
    "lcm_java_library",
    "lcm_py_library",
)

LCM_SRCS = glob(["*.lcm"])

lcm_cc_library(
    name = "lcmtypes_rs2_cc",
    lcm_package = "rs2_lcm",
    lcm_srcs = LCM_SRCS,
    tags = ["nolint"],
)

lcm_py_library(
    name = "lcmtypes_rs2_py",
    lcm_package = "rs2_lcm",
    lcm_srcs = LCM_SRCS,
    tags = ["nolint"],
    deps = [
        "@drake//lcmtypes:lcmtypes_drake_py",
    ],
)

lcm_java_library(
    name = "lcmtypes_rs2_java",
    lcm_package = "rs2_lcm",
    lcm_srcs = LCM_SRCS,
    deps = [
        "@drake//lcmtypes:lcmtypes_drake_java",
    ],
)

add_lint_tests()
